environments/develop/service.yml
apiVersion: v1
kind: Service
metadata:
  name: chay-techs-service
  namespace: chay-techs-development
  labels:
    app: chay-techs
    environment: development
spec:
  selector:
    app: chay-techs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
